# Web_hw_2

./: Dockerfile  README.md  pyproject.toml  setup.py
Bot_Jul_CC23.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
code_crafters_core/: AddressBook.py  AvadaKedavra.py  FileSorting.py  Languages.py  NoteFeature.py  Record.py  main.py
