[tool.poetry]
name = "code_crafters_core"
version = "1.3.130"
description = "Console bot helper Jul"
authors = ["Cr1VS <https://github.com/Cr1VS>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
emoji = "^2.9.0"
tabulate = "^0.9.0"
unidecode = "^1.3.7"
prompt-toolkit = "^3.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"   
